tests/error/modifier_errors/unexpected_ctxt_maneger.err
Error: Unexpected context manager (at $FILE:6:9)
  | 
4 | @guppy
5 | def test() -> None:
6 |     with True:
  |          ^^^^ Unexpected context manager in a context manager

Guppy compilation failed due to 1 previous error
